Added account creation as well as furthered authentication
Girlllll im doing it
