# backend/posts.js
@@ -6,13 +6,14 @@ export const getPosts = async (req, res, next) => {
 
     const sql = `
       SELECT
-        id,
-        user_id,
-        title,
-        content,
-        event_date,
-        coordinates
-      FROM posts
+        p.id,
+        u.username,
+        p.title,
+        p.content,
+        p.event_date,
+        p.coordinates
+      FROM posts AS p
+      JOIN users AS u ON p.user_id = u.id
       ORDER BY event_date DESC;
     `;
 
@@ -27,12 +28,12 @@ export const getPosts = async (req, res, next) => {
 export const createPost = async (req, res, next) => {
   try {
     const pool = req.app.locals.pool;
-    const { title, content, event_date, coordinates } = req.body;
+    const { title, content, coordinates } = req.body;
     const user_id = req.user.id;
 
     const sql = `
       INSERT INTO posts (user_id, title, content, event_date, coordinates)
-      VALUES ($1, $2, $3, $4, $5::jsonb)
+      VALUES ($1, $2, $3, NOW(), $4::jsonb)
       RETURNING
         id, user_id, title, content, event_date, coordinates;
     `;
@@ -41,7 +42,6 @@ export const createPost = async (req, res, next) => {
       user_id,
       title,
       content,
-      event_date || new Date(),
       coordinates === undefined ? null : JSON.stringify(coordinates),
     ];
 
